package org.dedda.games.scheisse.gui.cpu.inventory;

/**
 * Created by dedda on 02.12.14.
 */
public interface CategoriesChangeListener {

    public void categoriesChanged(CategoriesChangedEvent event);

}
