@startuml
abstract class javax.swing.table.AbstractTableModel
interface org.dedda.games.scheisse.gui.cpu.inventory.CategoriesChangeListener
interface org.dedda.games.scheisse.state.game.inventory.InventoryChangeListener

class org.dedda.games.scheisse.gui.cpu.inventory.table.InventoryTableModel{
    + {static} int ID
    + {static} int SYMBOL
    + {static} int NAME
    + {static} int NUMBER
    + {static} int VALUE
    + {static} int ATTACK
    + {static} int ARMOR
    + {static} String HEADER_ID
    + {static} String HEADER_SYMBOL
    + {static} String HEADER_NAME
    + {static} String HEADER_NUMBER
    + {static} String HEADER_VALUE
    + {static} String HEADER_ATTACK
    + {static} String HEADER_ARMOR
    + {static} int[] CATEGORIES
    + {static} String[] HEADERS
    - Inventory inventory
    - List<Integer> shownCategories
    + InventoryTableModel(Inventory)
    + int getRowCount()
    + int getColumnCount()
    + Object getValueAt(int, int)
    + Slot getSlotInRow(int)
    + boolean isCellEditable(int, int)
    + Class getColumnClass(int)
    + String getColumnName(int)
    + List<Integer> getShownCategories()
    + void setShownCategories(List<Integer>)
    + void enableCategory(int)
    + void disableCategory(int)
    + void inventoryChangeAction()
    + void categoriesChanged(CategoriesChangedEvent)
}

javax.swing.table.AbstractTableModel <|-- org.dedda.games.scheisse.gui.cpu.inventory.table.InventoryTableModel
org.dedda.games.scheisse.gui.cpu.inventory.CategoriesChangeListener <|.. org.dedda.games.scheisse.gui.cpu.inventory.table.InventoryTableModel
org.dedda.games.scheisse.state.game.inventory.InventoryChangeListener <|.. org.dedda.games.scheisse.gui.cpu.inventory.table.InventoryTableModel
@enduml